tests/errors/arg_type_mismatch.ptt
add(a int, b int) int { give a + b }
spark { yell(add("hi", 2)) }
